@@ -1,3 +1,7 @@
+8-26-2025
+- move battery for windows-11 waybar to the left side
+
+
 8-25-2025
 - move some modules from /templates to /mixins
 - remove suites from home-manager
